--- a/Workout/index.css
+++ b/Workout/index.css
@@ -42,8 +42,7 @@ a {
     left: 0%;
     width: 100%;
     height: 100%;
-    background-image: url(https://www.etown.edu/etcsandbox/kyle-test/images/images-cca/homepage-stats-lineart-wave1.png);
-    background-size: cover;
+    background-image:url(/Workout/Pictures/Wave1.png);
     opacity: .2;
     overflow: hidden;
     z-index: -1;
@@ -52,7 +51,7 @@ a {
 #main_Text {
     background-color: var(--light_blue);
     margin: auto;
-    max-width: 5%;
+    max-width: 50%;
 
 }
 
